--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.1.8"
   }
 }
